ordenando el codigo

--- a/PAGES/Contacto.html
+++ b/PAGES/Contacto.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
-    <!--ENCABEZADO-->
+<!--ENCABEZADO-->
     <header>
         <div>
             <div> <!-- imagen del logo -->   
@@ -49,8 +49,9 @@
             </div>
         </nav>
     </header>
-    
+<!--SECCION DE CONTACTO-->    
     <main >
+        <!--INFORMACION DE LA EMPRESA-->
         <section>
             <div class="info-dos">
                 <h4>Sobre Nosotros:</h4>
@@ -58,13 +59,14 @@
             <div>
                 <h6>PC TECNO es una empresa dedicada a la comercialización de productos tecnológicos orientados a la informática. 
                     Nuestra misión es acercar a todos nuestros clientes productos líderes a las tecnologías, ofreciéndoles la última generación de excelente calidad a precios acordes. 
-                    Apuntamos poder brindar a nuestros clientes la mayor satisfacción por cada uno de los productos comercializados brindándoles respaldo en el uso de las tecnologías que ofrecemos otorgando un óptimo servicio postventa.</h6>
+                    Apuntamos poder brindar a nuestros clientes la mayor satisfacción por cada uno de los productos comercializados brindándoles respaldo en el uso de las tecnologías que ofrecemos otorgando un óptimo servicio postventa.
+                </h6>
             </div>
             <div class="info-dos">
                 <h4 >Contactenos:</h4>
             </div>
         </section>
-
+        <!--FORMULARIO DE CONSULTA-->
         <div class="cuadro ">
             <form>
                 <div class="mb-3">
@@ -87,7 +89,6 @@
             </form>
         </div>
     </main>
-
 <!--PIE DE PAGINA-->
     <footer>
         <div class="contenedor">
