adaptando el sitio a vista mobile

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--ENCABEZADO-->
     <header>
         <div>
-            <div> <!-- imagen del logo -->   
+            <div class="logotipo"> <!-- imagen del logo -->   
                 <img class="img-uno" src="./IMG/Logo -PC-tecno.png" alt="imagen del logo">
             </div>
             <!--Boton de busqueda-->
