--- a/PAGES/Contacto.html
+++ b/PAGES/Contacto.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Esta es la pagian de contacto, en ella, podras expresar tu opinion acerca de su compra o de lo que usted desee">
+    <meta name="keywords" content="contacto">
     <title>PC TECNO</title>
     <!--LINK DE BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -67,7 +69,7 @@
             </div>
         </section>
         <!--FORMULARIO DE CONSULTA-->
-        <div class="cuadro ">
+        <div class="cuadro">
             <form>
                 <div class="mb-3">
                     <label for="exampleInputNombre1" class="form-label">Nombre:</label>
