--- a/PAGES/Perifericos-de-pc.html
+++ b/PAGES/Perifericos-de-pc.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Si estas buscando tu set up ideal, llegaste al lugar correcto">
+    <meta name="keywords" content="pc , set up , computadora , notebooks , perifericos , razer , aorus">
     <title>PC TECNO</title>
     <!--LINK DE BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
