--- a/PAGES/Notebooks.html
+++ b/PAGES/Notebooks.html
@@ -10,6 +10,8 @@
 <!--LINK DE BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<!--LINK DE ANIMATE.CSS-->    
+    <link rel="stylesheet" href="https:/cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
@@ -57,42 +59,42 @@
         <section class="container">
             <h2 class="producto">NOTEBOOKS:</h2>
             <article class="row d-flex ">
-                <div class="tarjeta col-2  ">
+                <div class="tarjeta col-2 animate__animated animate__slideInDown">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>                           
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__slideInDown">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title"> Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__slideInDown">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>    
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>         
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__slideInDown">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>                
-                <div class="tarjeta col-2 ">
+                <div class="tarjeta col-2 animate__animated animate__slideInDown ">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>                
-                <div class="tarjeta col-2 ">
+                <div class="tarjeta col-2 animate__animated animate__slideInDown">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">otebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>
