--- a/PAGES/Pc-armadas.html
+++ b/PAGES/Pc-armadas.html
@@ -7,9 +7,11 @@
     <meta name="description" content="Si estas buscando tu pc gamer ideal, llegaste al lugar correcto">
     <meta name="keywords" content="pc, gamer , computadora , notebooks , perifericos , razer , aorus">
     <title>PC TECNO</title>
-    <!--LINK DE BOOTSTRAP-->
+<!--LINK DE BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<!--LINK DE ANIMATE.CSS-->    
+    <link rel="stylesheet" href="https:/cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
