--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <!--LINK DE BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<!--LINK DE ANIMATE.CSS-->    
+    <link rel="stylesheet" href="https:/cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
@@ -81,17 +83,17 @@
         <section class="container">
             <h1 class="text-center">NUESTROS PRODUCTOS:</h1>
             <div class="row d-flex">
-                <div class="card-articulo col-sm-12 col-lg-4">
+                <div class="card-articulo col-sm-12 col-lg-4 ">
                     <a href="./PAGES/Notebooks.html"  class="card-uno">
                         <img src="./IMG/notebook.png" alt="foto de notebook">
                     </a>
                 </div>
-                <div class="card-articulo col-sm-12 col-lg-4">
+                <div class="card-articulo col-sm-12 col-lg-4 ">
                     <a href="./PAGES/Pc-armadas.html" class="card-dos">
                         <img src="./IMG/pc-armadas.png" alt="foto de pc">   
                     </a>
                 </div>    
-                <div class="card-articulo col-sm-12 col-lg-4">
+                <div class="card-articulo col-sm-12 col-lg-4 ">
                     <a href="./PAGES/Perifericos-de-pc.html" class="card-tres">
                         <img src="./IMG/periferico.png" alt="foto de perifericos">  
                     </a>
