--- a/PAGES/Contacto.html
+++ b/PAGES/Contacto.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Esta es la pagian de contacto, en ella, podras expresar tu opinion acerca de su compra o de lo que usted desee">
+    <meta name="description" content="Esta es la pagina de contacto, en ella, podras expresar tu opinion acerca de su compra o de lo que usted desee">
     <meta name="keywords" content="contacto">
     <title>PC TECNO</title>
 <!--LINK DE BOOTSTRAP-->
