--- a/PAGES/Notebooks.html
+++ b/PAGES/Notebooks.html
@@ -59,42 +59,42 @@
         <section class="container">
             <h2 class="producto">NOTEBOOKS:</h2>
             <article class="row d-flex ">
-                <div class="tarjeta col-2 animate__animated animate__slideInDown">
+                <div class="tarjeta col-6 col-md-4 animate__animated animate__zoomIn">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>                           
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2 animate__animated animate__slideInDown">
+                <div class="tarjeta col-6 col-md-4 animate__animated animate__zoomIn">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title"> Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2 animate__animated animate__slideInDown">
+                <div class="tarjeta col-6 col-md-4 animate__animated animate__zoomIn">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>    
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>         
-                <div class="tarjeta col-2 animate__animated animate__slideInDown">
+                <div class="tarjeta col-6 col-md-4 animate__animated animate__zoomIn">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>                
-                <div class="tarjeta col-2 animate__animated animate__slideInDown ">
+                <div class="tarjeta col-6 col-md-4 animate__animated animate__zoomIn ">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Notebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>                
-                <div class="tarjeta col-2 animate__animated animate__slideInDown">
+                <div class="tarjeta col-6 col-md-4 animate__animated animate__zoomIn">
                     <img src="../IMG/b19553e53bbf40fae07050592c9137b9.png" class="card-img-top" alt="imagen de notebook">
                     <div class="card-body d-flex">
                         <h5 class="card-title">otebook Lenovo Ideapad 81wa I3 10 8gb 256ssd</h5>
@@ -115,6 +115,18 @@
                 <h3>Nuestros Horarios: </h3>
                 <p><strong>Lun a Vier. 9:00 AM - 18:00 PM</strong></p>
                 <p><strong>Sab 10:00 AM - 14:30 PM.</strong></p>
+            </div>
+            <div class="redes-sociales">
+                <h3>Seguinos en nuestras redes: </h3>
+                <a href="https://www.facebook.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/>
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/>
+                </a>
+                <a href="https://www.youtube.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/youtube--v1.png" alt="youtube--v1"/>
+                </a>
             </div>
         </div>
     </footer>
