--- a/PAGES/Pc-armadas.html
+++ b/PAGES/Pc-armadas.html
@@ -59,42 +59,42 @@
         <section class="container">
             <h2 class="producto">PC ARMADAS:</h2>
             <article class="row d-flex ">
-                <div class="tarjeta col-2  ">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn ">
                         <img src="../IMG/d0feed14a1629ed455eb03f09d35d2c7.png" class="card-img-top" alt="imagen de computadora">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Pc Armada Computadora Ryzen 5 4650g 8gb 240ssd</h5>                           
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$100.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/d0feed14a1629ed455eb03f09d35d2c7.png" class="card-img-top" alt="imagen de computadora">
                     <div class="card-body d-flex">
                         <h5 class="card-title"> Pc Armada Computadora Intel i5 gen11 16gb 1tb ssd</h5>
                         <a href="#"><button  class="btn btn-outline-success" type="submit">$200.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/d0feed14a1629ed455eb03f09d35d2c7.png" class="card-img-top" alt="imagen de computadora">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Pc Armada Computadora Ryzen 7 5700G 32gb 512ssd</h5>    
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$300.000</button></a>
                     </div>
                 </div>               
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/d0feed14a1629ed455eb03f09d35d2c7.png" class="card-img-top" alt="imagen de computadora">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Pc Armada Computadora Intel i7 gen12 16gb 512ssd</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$400.000</button></a>
                     </div>
                 </div>                
-                <div class="tarjeta col-2 ">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/d0feed14a1629ed455eb03f09d35d2c7.png" class="card-img-top" alt="imagen de computadora">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Pc Armada Computadora Ryzen 7 5700G 32gb 1tb ssd</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$500.000</button></a>
                     </div>
                 </div>                
-                <div class="tarjeta col-2 ">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/d0feed14a1629ed455eb03f09d35d2c7.png" class="card-img-top" alt="imagen de computadora">
                     <div class="card-body d-flex">
                         <h5 class="card-title">Pc Armada Computadora Intel I7 gen13 64gb 512ssd</h5>
@@ -115,6 +115,18 @@
                 <h3>Nuestros Horarios: </h3>
                 <p><strong>Lun a Vier. 9:00 AM - 18:00 PM</strong></p>
                 <p><strong>Sab 10:00 AM - 14:30 PM.</strong></p>
+            </div>
+            <div class="redes-sociales">
+                <h3>Seguinos en nuestras redes: </h3>
+                <a href="https://www.facebook.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/>
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/>
+                </a>
+                <a href="https://www.youtube.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/youtube--v1.png" alt="youtube--v1"/>
+                </a>
             </div>
         </div>
     </footer>
