--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
 <body>
 <!--ENCABEZADO-->
     <header>
-        <div>
-            <div class="logotipo"> <!-- imagen del logo -->   
-                <img class="img-uno" src="./IMG/Logo -PC-tecno.png" alt="imagen del logo">
+        <div >
+            <div >
+                <div >    
+                    <div class="logotipo"> <!-- imagen del logo -->   
+                        <img class="img-uno" src="./IMG/Logo -PC-tecno.png" alt="imagen del logo">
+                    </div>
+                </div>
+                <!--Boton de busqueda-->
+                <div class=" w-100">
+                    <form class="boton d-flex justify-content-center" role="search">
+                        <input class="form-control me-2 " type="search" placeholder="Buscar producto..." aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
+                </div>
             </div>
-            <!--Boton de busqueda-->
-            <form class="boton d-flex justify-content-center" role="search">
-                <input class="form-control me-2 " type="search" placeholder="Buscar producto..." aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
         </div>
         <!--BARRA DE NAVEGACION-->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -100,8 +106,8 @@
                 </div>
             </div>    
         </section>
-    </main>
-<!--PIE DE PAGINA-->    
+    </main>   
+<!--PIE DE PAGINA-->
     <footer>
         <div class="contenedor">
             <div class="cliente">
@@ -112,6 +118,18 @@
                 <h3>Nuestros Horarios: </h3>
                 <p><strong>Lun a Vier. 9:00 AM - 18:00 PM</strong></p>
                 <p><strong>Sab 10:00 AM - 14:30 PM.</strong></p>
+            </div>
+            <div class="redes-sociales">
+                <h3>Seguinos en nuestras redes: </h3>
+                <a href="https://www.facebook.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/>
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/>
+                </a>
+                <a href="https://www.youtube.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/youtube--v1.png" alt="youtube--v1"/>
+                </a>
             </div>
         </div>
     </footer>
