--- a/PAGES/Perifericos-de-pc.html
+++ b/PAGES/Perifericos-de-pc.html
@@ -59,42 +59,42 @@
         <section class="container">
             <h2 class="producto">PERIFERICOS:</h2>
             <article class="row d-flex ">
-                <div class="tarjeta col-2  ">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn ">
                         <img src="../IMG/03b395523cd0d11101f11acac34ddc0b.png" class="card-img-top" alt="imagen de periferico">
                     <div class="card-body d-flex">
                         <h5 class="card-title">MOUSE LOGITECH G403 GAMING</h5>                           
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$10.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/03b395523cd0d11101f11acac34ddc0b.png" class="card-img-top" alt="imagen de periferico">
                     <div class="card-body d-flex">
                         <h5 class="card-title"> MOUSE LOGITECH G403 GAMING</h5>
                         <a href="#"><button  class="btn btn-outline-success" type="submit">$20.000</button></a>
                     </div>
                 </div>
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/03b395523cd0d11101f11acac34ddc0b.png" class="card-img-top" alt="imagen de periferico">
                     <div class="card-body d-flex">
                         <h5 class="card-title">MOUSE LOGITECH G403 GAMING</h5>    
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$15.000</button></a>
                     </div>
                 </div>              
-                <div class="tarjeta col-2">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/03b395523cd0d11101f11acac34ddc0b.png" class="card-img-top" alt="imagen de periferico">
                     <div class="card-body d-flex">
                         <h5 class="card-title">MOUSE LOGITECH G403 GAMING</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$14.000</button></a>
                     </div>
                 </div>               
-                <div class="tarjeta col-2 ">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/03b395523cd0d11101f11acac34ddc0b.png" class="card-img-top" alt="imagen de periferico">
                     <div class="card-body d-flex">
                         <h5 class="card-title">MOUSE LOGITECH G403 GAMING</h5>                        
                         <a href="#"> <button  class="btn btn-outline-success" type="submit">$18.000</button></a>
                     </div>
                 </div>                
-                <div class="tarjeta col-2 ">
+                <div class="tarjeta col-2 animate__animated animate__zoomIn">
                     <img src="../IMG/03b395523cd0d11101f11acac34ddc0b.png" class="card-img-top" alt="imagen de periferico">
                     <div class="card-body d-flex">
                         <h5 class="card-title">MOUSE LOGITECH G403 GAMING</h5>
@@ -115,6 +115,18 @@
                 <h3>Nuestros Horarios: </h3>
                 <p><strong>Lun a Vier. 9:00 AM - 18:00 PM</strong></p>
                 <p><strong>Sab 10:00 AM - 14:30 PM.</strong></p>
+            </div>
+            <div class="redes-sociales">
+                <h3>Seguinos en nuestras redes: </h3>
+                <a href="https://www.facebook.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/facebook.png" alt="facebook"/>
+                </a>
+                <a href="https://www.instagram.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/fluency/48/instagram-new.png" alt="instagram-new"/>
+                </a>
+                <a href="https://www.youtube.com" target="_blank">
+                    <img width="48" height="48" src="https://img.icons8.com/color/48/youtube--v1.png" alt="youtube--v1"/>
+                </a>
             </div>
         </div>
     </footer>
