--- a/PAGES/Notebooks.html
+++ b/PAGES/Notebooks.html
@@ -19,7 +19,7 @@
     <header>
         <div>
             <div class="logotipo"> <!-- imagen del logo -->   
-                <img class="img-uno" src="/IMG/Logo -PC-tecno.png" alt="imagen del logo">
+                <img class="img-uno" src="../IMG/Logo -PC-tecno.png" alt="imagen del logo">
             </div>
             <!--Boton de busqueda-->
             <form class="boton d-flex justify-content-center" role="search">
