--- a/PAGES/Contacto.html
+++ b/PAGES/Contacto.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 <!--LINK DE ANIMATE.CSS-->    
     <link rel="stylesheet" href="https:/cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
 <!--ENCABEZADO-->
@@ -21,7 +21,7 @@
             <div >
                 <div >    
                     <div class="logotipo"> <!-- imagen del logo -->   
-                        <img class="img-uno" src="/IMG/Logo -PC-tecno.png" alt="imagen del logo">
+                        <img class="img-uno" src="../IMG/Logo -PC-tecno.png" alt="imagen del logo">
                     </div>
                 </div>
                 <!--Boton de busqueda-->
